--- a/src/posts/2020/10-03-2020-test.mdx
+++ b/src/posts/2020/10-03-2020-test.mdx
@@ -2,6 +2,7 @@
 path: "/blog/my-first-post"
 date: "2020-03-10"
 title: "My first blog post"
+description: "test description"
 ---
 
 # Has anyone heard about GatsbyJS yet?
