add blog styling

--- a/src/posts/2020/10-03-2020-test.mdx
+++ b/src/posts/2020/10-03-2020-test.mdx
@@ -1,8 +1,10 @@
 ---
 path: "/blog/my-first-post"
 date: "2020-03-10"
-title: "My first blog post"
+title: "Creating my portfolio with GatsbyJS & Netlify ✨"
 description: "test description"
 ---
 
-# Has anyone heard about GatsbyJS yet?
+
+![Gatsby & Netlify](./gatsby-netlify.png)
+Surprise surprise, 2020 meant it was time for another iteration of my portfolio. 
