make colour pull from frontmatter

--- a/src/posts/2020/10-03-2020-test.mdx
+++ b/src/posts/2020/10-03-2020-test.mdx
@@ -2,7 +2,8 @@
 path: "/blog/my-first-post"
 date: "2020-03-10"
 title: "Creating my portfolio with GatsbyJS & Netlify ✨"
-description: "test description"
+description: "How I built this portfolio using GatsbyJS and deployed it using Netlify"
+css: "green"
 ---
 
 
