--- a/src/posts/2020/10-03-2020-test.mdx
+++ b/src/posts/2020/10-03-2020-test.mdx
@@ -1,9 +1,10 @@
 ---
 path: "/blog/creating-a-portfolio-with-gatsby-netlify"
-date: "2020-03-10"
+date: "10-03-2020"
 title: "Creating my portfolio with GatsbyJS & Netlify ✨"
 description: "How I built this portfolio using GatsbyJS and deployed it using Netlify"
 css: "green"
+published: true
 ---
 
 
