add new contetn

--- a/src/posts/2020/10-03-2020-portfolio-gatsby.mdx
+++ b/src/posts/2020/10-03-2020-portfolio-gatsby.mdx
@@ -10,12 +10,14 @@ published: true
 
 ![Gatsby & Netlify](./gatsby-netlify.png)
 
-Surprise surprise, 2020 meant it was time for another iteration of my portfolio. Working with Magento 2 day in day out meant my exposure to React was minimal. I decided to throw myself in the deep end and set myself a task of rebuilding my current portfolio in React. I had no idea where to start, however, I had previously used Jekyll to build a few small static sites. I decided to see if there was anything similar in the React world, and I came across Gatsby. 
+Surprise surprise, 2020 meant it was time for another iteration of my portfolio. Working with Magento 2 day in day out meant my exposure to React was minimal. I decided to throw myself in the deep end and set myself a task of rebuilding my current portfolio in React. I had no idea where to start, however, I had previously used Jekyll to build a few small static sites. I decided to see if there was anything similar in the React world, and I came across Gatsby.
 
-Before I start any project, I always look for some form of inspiration, just to see what is capable with the tools i'm looking to use. I had a flick through the Gatsby showcase and I was impressed with what has been built using Gatsby. 
+Before I start any project, I always look for some form of inspiration, just to see what is capable with the tools i'm looking to use. I had a flick through the Gatsby showcase and I was impressed with what has been built using Gatsby.
 
-Creating my portfolio in Gatsby has allowed me to get a deeper understanding of core ES6 features such as destructuring and the array methods (map, reduce, filter and sort). Map has been used quite a lot on this iteraiton of my portfolio, especially when I'm using graphql to query my data. 
+Creating my portfolio in Gatsby has allowed me to get a deeper understanding of core ES6 features such as destructuring and the array methods (map, reduce, filter and sort). Map has been used quite a lot on this iteraiton of my portfolio, especially when I'm using graphql to query my data.
 
-One feature I love about Gatsby is the ability to create pages dynamically using the createPage API. Although I don't fully understand how this works (yet), I used Gatsby's docs to help me setup createPage to generate pages for my blogs, which are written in MDX. Gatsby's documentation is up there at the top of the leaderboard. 
+One feature I love about Gatsby is the ability to create pages dynamically using the createPage API. Although I don't fully understand how this works (yet), I used Gatsby's docs to help me setup createPage to generate pages for my blogs, which are written in MDX. Gatsby's documentation is up there at the top of the leaderboard.
 
-This site is effortlessly hosted and deployed via Netlify. The second I make a change to my master branch on my GitHub repo, Netlify triggers the build and my changes are live within seconds.  
+This site is effortlessly hosted and deployed via Netlify. The second I make a change to my master branch on my GitHub repo, Netlify triggers the build and my changes are live within seconds.
+
+If you're interested in reading my code which has been used to generate this site, here is a link to my [GitHub repository](https://github.com/PatrickWhitehouse/gatsby-portfolio).
