--- a/src/posts/2020/31-10-2020-placeholder-blog.mdx
+++ b/src/posts/2020/31-10-2020-placeholder-blog.mdx
@@ -4,5 +4,5 @@ date: "31-03-2020"
 title: "Placeholder blog"
 description: "Temporary placeholder blog item"
 css: "red"
-published: true
+published: false
 ---
